<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout"
    android:padding="8dp"
    tools:context=".CreateOrderActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvWelcome"
        style="@style/TextCursive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:textAlignment="center"
        android:textColor="@color/dark_gold"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/rgDrinkChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome">

        <RadioButton
            android:id="@+id/rbTea"
            style="@style/TextCursive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/txt_tea" />

        <RadioButton
            android:id="@+id/rbCoffee"
            style="@style/TextCursive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_coffee" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvDrinkOptions"
        style="@style/TextCursive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txt_drink_options"
        android:textColor="@color/dark_gold"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgDrinkChoose" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvDrinkOptions">

        <CheckBox
            android:id="@+id/cbSugar"
            style="@style/TextCursive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/sugar" />

        <CheckBox
            android:id="@+id/cbMilk"
            style="@style/TextCursive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/milk" />

        <CheckBox
            android:id="@+id/cbLemon"
            style="@style/TextCursive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lemon" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDrinkType"
        style="@style/TextCursive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/drink_type"
        android:textColor="@color/dark_gold"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Spinner
        android:id="@+id/spinnerTea"
        style="@style/TextCursive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/tea_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDrinkType" />

    <Spinner
        android:id="@+id/spinnerCoffee"
        style="@style/TextCursive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/coffee_types"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDrinkType" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateOrder"
        style="@style/TextCursive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/txt_create_order"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTea" />
</androidx.constraintlayout.widget.ConstraintLayout>