<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:contentDescription="@string/txt_coffee_logo_decr"
        tools:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:paddingBottom="8dp"
        android:text="@string/txt_welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_enter_name_hint"
        android:elevation="4dp"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_enter_password_hint"
        android:elevation="4dp"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="18sp"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_order_button"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:elevation="4dp"
        app:cornerRadius="10dp"
        android:textSize="24sp" />
</LinearLayout>